--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="projects">Projects</a></li>
 						<li><a href="#" data-nav-section="publications">Publications</a></li>
-						<li><a href="#" data-nav-section="android">Android: Fun and research</a></li>
+						<li><a href="#" data-nav-section="android">Research</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -98,7 +98,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-											<h2>A Software/Data Engineer and</br>a Data Scientist, interested in working</br>on challenging problems around data</br>and what we can do with it!</h2>
+											<h2>A Software Engineer by training and</br>a Data Scientist in the making</br>interested in working on challenging problems around data...</h2>
 												<p><a class="btn btn-primary btn-learn" href="assets/resume.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -119,7 +119,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<strong>My name is Sofia Dutta,</strong> a Data Scientist in the making, I currently work for <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> as a <i><u>Data Scientist Intern.</u></i> At NewWave, I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br></br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my internship at NewWave and graduate studies at UMBC.</br></br>	Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
+										<strong>My name is Sofia Dutta,</strong> a Software Engineer by training and a Data Scientist in the making, I currently work for <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> as a <i><u>Data Scientist Intern.</u></i> At NewWave, I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br></br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my internship at NewWave and graduate studies at UMBC.</br></br>	Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
 									</div>
 								</div>
 							</div>
@@ -127,7 +127,7 @@
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-lab2"></i></span>
-										<h3>Data Science</h3>
+										<h3>Python Programming</h3>
 									</div>
 								</div>
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
@@ -175,7 +175,13 @@
 					               <div class="timeline-label">
 					               	<h2><a href="https://newwave.io/" target="_blank">Data Scientist Intern</a> <span>Present - 2020</span></h2>
 									   <p>Data Scientist Intern at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
-									   <p>Working on a Data Science project building rules-based machine learning errordetection models to carry out data quality analysis tasks on Centers for Medicare & Medicaid Services (CMS) healthcare claims data. Instrumental in building a data exploration platform using cloud-based tools like LookML, software from Looker. Created visualizations of customer data to provide the best actions when choosing a data quality improvement algorithm.</p>
+											<ul>
+									   			<li>Built a system for computation of data quality analysis and exploration in a record time of a month.</li>
+									   			<li>Trained a machine learning model using 3000 rules for quality computation metrics.</li>
+									   			<li>Improved computation speed 10-fold by deploying analysis workflow in Google Cloud Platform (GCP) clusters and using Apache Spark for quality metrics computations.</li>
+									   			<li>Exported results to Looker for creating intuitive dashboards visualizations.</li>
+									   			<li>Performed data quality analysis on half a million healthcare records from Centers for Medicare & Medicaid.</li>
+								   			</ul>
 					               </div>
 					            </div>
 					         </article>
@@ -190,7 +196,12 @@
 					               <div class="timeline-label">
 					                  <h2><a href="https://ebiquity.umbc.edu" target="_blank">Semantic Web Researcher</a> <span>2020 - 2019</span></h2>
 									   <p>Graduate Student Researcher in Semantic Web and Smart Home Access Control, <a href="https://ebiquity.umbc.edu" target="_blank">Ebiquity Group</a>, <a href="https://www.umbc.edu" target="_blank">UMBC</a>, USA</p>
-									   <p>Performed research in Semantic Web, Context-based Access Control in Smart Homes and published a <a href="https://ebiquity.umbc.edu/paper/html/id/887/" target="_blank">paper</a> at IEEE Big Data Security 2020 conference.</p>
+										   	<ul>
+									   			<li>Authored an <a href="https://ebiquity.umbc.edu/paper/owl/id/887/Context-Sensitive-Access-Control-in-Smart-Home-Environments">Ontology</a> for Smart Home Access Control by extending earlier research in Semantic Web.</li>
+									   			<li>Developed an <a href="https://github.com/sofiadutta/AndroidSmartLights">Android app</a> for handling context-sensitive access control in a Smart Home Environment.</li>
+									   			<li>Created <a href="https://www.youtube.com/watch?v=DZq-oZ_Cv1g&list=UUEB2cqBZTym9WxWvGu2UA0w">YouTube videos</a> for presentation to the National Institute of Standards and Technology.</li>
+									   			<li>Published a <a href="https://ebiquity.umbc.edu/paper/html/id/887/Context-Sensitive-Access-Control-in-Smart-Home-Environments">paper</a> at the IEEE Big Data Security 2020 conference.</li>
+									   		</ul>
 					               </div>
 					            </div>
 					         </article>
@@ -203,7 +214,18 @@
 					               <div class="timeline-label">
 					               	<h2><a href="https://www.tcs.com" target="_blank">Software Developer and Data Analyst</a> <span>2018 - 2010</span></h2>
 									   <p>Software Developer and Data Analyst at <a href="https://www.tcs.com" target="_blank">Tata Consultancy Services (TCS) Ltd.</a>, India</p>
-									   <p>I was a team leader and software developer working on Oracle Apps, Oracle Databases and Oracle Fusion Human Capital Management functionalities. I performed software design, development and testing activities on several client projects for TCS. I carried out all tasks in the Software Development Life Cycle starting from requirement analysis to software testing and maintenance.</p>
+									   <ul>
+									   <li>Led the design, development, and delivery management of seven projects for clients of TCS.</li>
+									   <li>Created API interfaces using PL/SQL stored procedures for daily usage for clients of TCS.</li>
+									   <li>Led meetings to capture requirements from DHL UK, Staples USA, Hyatt USA, Kaiser-Permanente USA.</li>
+									   <li>Carried out change based regression analysis and documented software functional specifications.</li>
+									   <li>Prepared test plans and executed system integration testing and user-acceptance testing.</li>
+									   <li>Ensured client systems were up in four hours after migration activities saving millions of dollars in potential revenue lost.</li>
+									   <li>Implemented scripts for data migration of a billion records while adhering to strict time SLA bounds.</li>
+									   <li>Completed client data migration from legacy Oracle Apps (11i) to Oracle ERP Suite (R12).</li>
+									   <li>From 2013 - 2018, managed continuous integration and continuous deployment in production environments.</li>
+									   <li>Got certified in seven Oracle Apps competencies while working for client projects.</li>
+									   </ul>
 					               </div>
 					            </div>
 					         </article>
@@ -236,9 +258,9 @@
 							<div class="progress-wrap">
 								<h3>Python</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="95"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
+								    <span>95%</span>
 								  	</div>
 								</div>
 							</div>
@@ -247,9 +269,9 @@
 							<div class="progress-wrap">
 								<h3>Java</h3>
 								<div class="progress">
-									<div class="progress-bar color-2" role="progressbar" aria-valuenow="75"
-										 aria-valuemin="0" aria-valuemax="100" style="width:75%">
-										<span>75%</span>
+									<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
+										 aria-valuemin="0" aria-valuemax="100" style="width:80%">
+										<span>80%</span>
 									</div>
 								</div>
 							</div>
@@ -280,9 +302,9 @@
 							<div class="progress-wrap">
 								<h3>Keras</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="80"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
@@ -291,9 +313,9 @@
 							<div class="progress-wrap">
 								<h3>Tensorflow</h3>
 								<div class="progress">
-									<div class="progress-bar color-6" role="progressbar" aria-valuenow="70"
-										 aria-valuemin="0" aria-valuemax="100" style="width:70%">
-										<span>70%</span>
+									<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+										 aria-valuemin="0" aria-valuemax="100" style="width:80%">
+										<span>80%</span>
 									</div>
 								</div>
 							</div>
@@ -302,9 +324,9 @@
 							<div class="progress-wrap">
 								<h3>MLlib</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="80"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+								    <span>80%</span>
 								  	</div>
 								</div>
 							</div>
@@ -357,9 +379,9 @@
 							<div class="progress-wrap">
 								<h3>AWS S3</h3>
 								<div class="progress">
-									<div class="progress-bar color-12" role="progressbar" aria-valuenow="70"
-										 aria-valuemin="0" aria-valuemax="100" style="width:70%">
-										<span>70%</span>
+									<div class="progress-bar color-12" role="progressbar" aria-valuenow="80"
+										 aria-valuemin="0" aria-valuemax="100" style="width:80%">
+										<span>80%</span>
 									</div>
 								</div>
 							</div>
