modified:   index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="projects">Projects</a></li>
 						<li><a href="#" data-nav-section="publications">Publications</a></li>
-						<li><a href="#" data-nav-section="android">Research</a></li>
+						<li><a href="#" data-nav-section="android">Research Demos</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
