modified:   ../index.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<strong>My name is Sofia Dutta,</strong> a Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> At NewWave, I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br></br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my internship at NewWave and graduate studies at UMBC.</br></br>	Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
+										<strong>My name is Sofia Dutta,</strong> a Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> At NewWave, I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br></br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my work at NewWave and during my graduate studies at UMBC.</br></br>Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
 									</div>
 								</div>
 							</div>
@@ -183,8 +183,8 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="https://newwave.io/" target="_blank">Data Scientist Intern</a> <span>Present - 2020</span></h2>
-									   <p>Data Scientist Intern at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
+					               	<h2><a href="https://newwave.io/" target="_blank">Senior Data Scientist</a> <span>Present - 2021</span></h2>
+									   <p>Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
 											<ul>
 									   			<li>Built a system for computation of data quality analysis and exploration in a record time of a month.</li>
 									   			<li>Trained a machine learning model using 3000 rules for quality computation metrics.</li>
@@ -196,7 +196,19 @@
 					            </div>
 					         </article>
 
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-5">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="https://newwave.io/" target="_blank">Data Scientist Intern</a> <span>2020 - 2020</span></h2>
+									   <p>Data Scientist Intern at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
+					               </div>
+					            </div>
+					         </article>
+
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					            <div class="timeline-entry-inner">
 
 					               <div class="timeline-icon color-1">
