--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 									<i class="icon-mail6"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="mailto:sofia.dutta17@gmail.com" target="_blank">sofia DOT dutta 17 AT gmail DOT com</a></p>
+									<p>sofia DOT dutta 17 AT gmail DOT com</p>
 								</div>
 							</div>
 
