--- a/index.html
+++ b/index.html
@@ -770,8 +770,7 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="https://goo.gl/maps/vE1YVRJPCMp9sgu96" target="_blank">376 Information Technology and Engineering, 1000 Hilltop Cir, Baltimore, MD 21250</a><iframe width="450" height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA5PRNIT_xN9GLIDdor1ccKME_HgtFB_1Q&q=
-UMBC+Ebiquity+Lab" allowfullscreen></iframe></p>
+									<p>Usually can be found here...<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=NewWave%20Telecom%20and%20Technologies%2C%20Inc.%2C%20Meadowridge%20Road%2C%20Elkridge%2C%20MD%2C%20USA&key=AIzaSyBtjmkslVpiWFtWr1w_JnD_PxX6a-9OlQs" allowfullscreen></iframe></p>
 								</div>
 							</div>
 						</div>
