new file:   assets/official-transcript-sofia-dutta.pdf

--- a/index.html
+++ b/index.html
@@ -72,15 +72,16 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
-						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="experience">Experience</a></li>
-						<li><a href="#" data-nav-section="skills">Skills</a></li>
-						<li><a href="#" data-nav-section="education">Education</a></li>
-						<li><a href="#" data-nav-section="projects">Projects</a></li>
-						<li><a href="#" data-nav-section="publications">Publications</a></li>
-						<li><a href="#" data-nav-section="android">Research Demos</a></li>
-						<li><a href="#" data-nav-section="contact">Contact</a></li>
+						<li class="active"><a href="home" data-nav-section="home">Home</a></li>
+						<li><a href="about" data-nav-section="about">About</a></li>
+						<li><a href="experience" data-nav-section="experience">Experience</a></li>
+						<li><a href="skills" data-nav-section="skills">Skills</a></li>
+						<li><a href="education" data-nav-section="education">Education</a></li>
+						<li><a href="capstone" data-nav-section="capstone">Capstone Project</a></li>
+						<li><a href="projects" data-nav-section="projects">Projects</a></li>
+						<li><a href="publications" data-nav-section="publications">Publications</a></li>
+						<li><a href="android" data-nav-section="android">Research Demos</a></li>
+						<li><a href="contact" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -186,11 +187,11 @@
 					               	<h2><a href="https://newwave.io/" target="_blank">Senior Data Scientist</a> <span>Present - 2021</span></h2>
 									   <p>Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
 											<ul>
-									   			<li>Built a system for computation of data quality analysis and exploration in a record time of a month.</li>
-									   			<li>Trained a machine learning model using 3000 rules for quality computation metrics.</li>
-									   			<li>Improved computation speed 10-fold by deploying analysis workflow in Google Cloud Platform (GCP) clusters and using Apache Spark for quality metrics computations.</li>
-									   			<li>Exported results to Looker for creating intuitive dashboards visualizations.</li>
-									   			<li>Performed data quality analysis on half a million healthcare records from Centers for Medicare & Medicaid.</li>
+												<li>Working on the Medicaid Data Quality Analytics (MDQA) project. Performing data quality analysis on millions of healthcare records from Centers for Medicare & Medicaid.</li>
+												<li>Was able to successfully improve computation speed by 10-fold by deploying data analysis workflow in Google Cloud Platform (GCP) clusters and using Apache Spark for quality metrics computations.</li>
+												<li>Utilizing Google Cloud Storage and BigQuery for storage and faster processing of large quantities of healthcare data.</li>
+												<li>Training machine learning models using thousands of rules for quality computation metrics.</li>
+												<li>Leading data processing efforts, guiding new employees to quickly ramp up on data analytics and achieve project goals.</li>
 								   			</ul>
 					               </div>
 					            </div>
@@ -204,6 +205,12 @@
 					               <div class="timeline-label">
 					               	<h2><a href="https://newwave.io/" target="_blank">Data Scientist Intern</a> <span>2020 - 2020</span></h2>
 									   <p>Data Scientist Intern at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
+									   		<ul>
+												<li>Carried out data visualization tasks using LookML, Matplotlib, and Seaborn to present data quality outcomes from various quality computation metrics.</li>
+												<li>Created an end-to-end architecture design and database schema design for the MDQA data quality analytics platform.</li>
+												<li>Collaborated with the Product Owner and other engineers in creating mechanisms for generating fake training data using Python programming to test out the efficacy of machine learning algorithms used in the project.</li>
+												<li>Carried out necessary DevOps tasks for setting up Big Data Analytics environment by configuring GCP environment to execute Python programs and connected the cloud infrastructure with Looker's dashboards for delivering computed results to be presented to customers.</li>
+								   			</ul>
 					               </div>
 					            </div>
 					         </article>
@@ -273,9 +280,6 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>I am a Data Scientist with experience in Data Analysis, Machine Learning and Software Development.</p>
-						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>Python</h3>
@@ -474,6 +478,78 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="colorlib-captsone" data-section="capstone">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Captsone Project</span>
+							<h2 class="colorlib-heading animate-box">Capstone Project</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="timeline-centered">
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+									<div class="timeline-entry-inner">
+
+										<div class="timeline-icon color-1">
+											<i class="icon-pen2"></i>
+										</div>
+
+										<div class="timeline-label">
+											<h2><a href="https://sites.google.com/umbc.edu/data606/fall-2020/sofia-dutta" target="_blank">QABot: A Chatbot for Open Question Answering Using Neural Networks</a></h2>
+											<p><a href="https://sites.google.com/umbc.edu/data606/fall-2020/sofia-dutta" target="_blank">QABot: A Chatbot for Open Question Answering Using Neural Networks</a>: Built “QABot”, a Chatbot using the sequence-to-sequence Deep Learning model that utilizes the Encoder Decoder Neural Network architecture combined with Attention Mechanism to answer user search queries. Created a model by training a Deep Neural using the PyTorch Deep Learning Framework. Used Recurrent Neural Network architecture that are better at dealing with text sequences. Used both Teacher Forcing and Auto-Regressive approaches for model training and Auto-Regressive approach for model evaluation. Used BERT (Bidirectional Encoder Representations from Transformers) for tokenization and combined Transformer and GPT-2 for model fine tuning.</p>
+										</div>
+									</div>
+								</article>
+
+								<article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+									<div class="timeline-entry-inner">
+										<div class="timeline-icon color-none">
+										</div>
+									</div>
+								</article>
+							</div>
+						</div>
+					</div>
+					<div class="row row-pt-md">
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-1">
+								<span class="icon">
+									<i class="icon-flash"></i>
+								</span>
+								<div class="desc">
+									<h3>Capstone: QABot standard</h3>
+									<p><a href="datascience-ipynbs/capstone/QABot.html" target="_blank">QABot standard</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-2">
+								<span class="icon">
+									<i class="icon-lab2"></i>
+								</span>
+								<div class="desc">
+									<h3>Capstone: QABot using RNN</h3>
+									<p><a href="datascience-ipynbs/capstone/QABot_seq2seq_model_using_rnn.html" target="_blank">QABot using RNN</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-3">
+								<span class="icon">
+									<i class="icon-weather-stormy"></i>
+								</span>
+								<div class="desc">
+									<h3>Capstone: QABot Transformer</h3>
+									<p><a href="datascience-ipynbs/capstone/QABot_seq2seq_model_using_transformer.html" target="_blank">QABot using Transformer</a></p>
+								</div>
+							</div>
+						</div>	
 					</div>
 				</div>
 			</section>
