modified:   index.html

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 										<h3>Python Programming</h3>
 									</div>
 								</div>
-								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
+								<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-lightbulb"></i></span>
 										<h3>Deep Learning</h3>
 									</div>
 								</div>
-								<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
+								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-flash"></i></span>
 										<h3>Machine Learning</h3>
@@ -155,7 +155,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+								<div class="col-md-12 animate-box" data-animate-effect="fadeInRight">
 									<div class="hire">
 										<h3>Master's in Data Science with a <strong>4.0</strong> GPA!</h3>
 										<a href="mailto:sofia.dutta17@gmail.com" target="_blank" class="btn-hire">Hire me</a>
@@ -235,7 +235,7 @@
 					            </div>
 					         </article>
 
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
 					                  <i class="icon-pen2"></i>
@@ -841,7 +841,7 @@
 								</div>
 							</div>
 
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
+							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInRight">
 								<div class="colorlib-icon">
 									<i class="icon-map"></i>
 								</div>
