modified:   index.html

--- a/index.html
+++ b/index.html
@@ -188,11 +188,12 @@
 					               	<h2><a href="https://newwave.io/" target="_blank">Senior Data Scientist</a> <span>Present - 2021</span></h2>
 									   <p>Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
 											<ul>
-												<li>Working on the Medicaid Data Quality Analytics (MDQA) project. Performing data quality analysis on millions of healthcare records from Centers for Medicare & Medicaid.</li>
-												<li>Was able to successfully improve computation speed by 10-fold by deploying data analysis workflow in Google Cloud Platform (GCP) clusters and using Apache Spark for quality metrics computations.</li>
+												<li>Working on the Imersis project. Performing data quality analysis on millions of healthcare records from Centers for Medicare & Medicaid. Driving system design work and making the right platform choices for NewWave’s projects.</li>
+												<li>Successfully improved computation speed by 10-fold by deploying data analysis workflow in Google Cloud Platform(GCP) clusters and using Apache Spark for quality metrics computations.</li>
 												<li>Utilizing Google Cloud Storage and BigQuery for storage and faster processing of large quantities of healthcare data.</li>
 												<li>Training machine learning models using thousands of rules for quality computation metrics.</li>
-												<li>Leading data processing efforts, guiding new employees to quickly ramp up on data analytics and achieve project goals.</li>
+												<li>Leading data-processing efforts, guiding new employees to quickly ramp up on data analytics and achieve project goals.</li>
+												<li>Using Apache Airflow orchestrated Big Data processing on GCP clusters and automated data analytics workflow for Imersis project.</li>
 								   			</ul>
 					               </div>
 					            </div>
@@ -208,7 +209,7 @@
 									   <p>Data Scientist Intern at <a href="https://newwave.io/" target="_blank">NewWave Telecom and Technologies, Inc.</a>, Woodlawn, MD, USA</p>
 									   		<ul>
 												<li>Carried out data visualization tasks using LookML, Matplotlib, and Seaborn to present data quality outcomes from various quality computation metrics.</li>
-												<li>Created an end-to-end architecture design and database schema design for the MDQA data quality analytics platform.</li>
+												<li>Created an end-to-end architecture design and database schema design for the Imersis data quality analytics platform.</li>
 												<li>Collaborated with the Product Owner and other engineers in creating mechanisms for generating fake training data using Python programming to test out the efficacy of machine learning algorithms used in the project.</li>
 												<li>Carried out necessary DevOps tasks for setting up Big Data Analytics environment by configuring GCP environment to execute Python programs and connected the cloud infrastructure with Looker's dashboards for delivering computed results to be presented to customers.</li>
 								   			</ul>
@@ -316,7 +317,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Sci-kit Learn</h3>
+								<h3>Sci-kit Learn, MLlib, OpenCV</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="85"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -349,7 +350,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>MLlib</h3>
+								<h3>Apache Airflow</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
