--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Sofia</h1>
-											<h2>A Senior Data Scientist at NewWave</br>interested in working on challenging problems around data...</h2>
+											<h2>A Technical Leader at NewWave</br>interested in working on challenging problems around data...</h2>
 												<p><a class="btn btn-primary btn-learn" href="assets/resume.pdf" target="_blank">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -131,7 +131,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<strong>My name is Sofia Dutta,</strong> a Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> At NewWave, I am part of a team working on Machine Learning problems in their Medicaid Data Quality Assistant (MDQA) project from the healthcare domain.</br></br>I have worked on several Data Science, Machine Learning, and Deep Learning projects during my work at NewWave and during my graduate studies at UMBC.</br></br>Previously, I used to work as a Software Developer and Data Analyst for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
+										<strong>My name is Sofia Dutta,</strong> a Technical Leader and Senior Data Scientist at <a href="https://newwave.io/" target="_blank">NewWave Telecom & Technologies, Inc.</a> At NewWave, I am part of a team working on Data Quality Analytics problems in the <a href="https://newwave.io/imersis-newwave-mathematica-state-data-quality" target="_blank">Imersis project</a>.</br></br>I have previously worked on many Data Science and Deep Learning projects as a graduate student at UMBC.</br></br>Before that, I used to work as a Software Engineer for <a href="https://www.tcs.com/" target="_blank">Tata Consultancy Services</a> from 2010 to 2018.</p>
 									</div>
 								</div>
 							</div>
