new file:   LICENSE

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<!--Source https://github.com/startbootstrap/startbootstrap-resume-->
 <html>
 	<head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
